# neurospider

./: .gitignore  Cargo.toml  DAY1_COMPLETE.md  DAY1_STRUCTURE_COMPLETE.md  DEPENDENCIES_UPDATED.md  Makefile  README.md  neurospider_implementation.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/benches/: ai_benchmarks.rs  crawling_benchmarks.rs  storage_benchmarks.rs
benchmarks/src/: lib.rs
crates/neurospider-ai/: Cargo.toml
crates/neurospider-ai/src/: lib.rs
crates/neurospider-ai/src/llm/: client.rs  quality_scorer.rs
crates/neurospider-ai/src/models/: content_classifier.rs  crawl_predictor.rs  mod.rs
crates/neurospider-ai/src/vector/: database.rs  embeddings.rs  mod.rs
crates/neurospider-api/: Cargo.toml
crates/neurospider-api/src/: lib.rs  main.rs
crates/neurospider-api/src/handlers/: analytics.rs  crawl.rs  jobs.rs  mod.rs
crates/neurospider-api/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
crates/neurospider-api/src/proto/: crawl.proto  mod.rs
crates/neurospider-cli/: Cargo.toml
crates/neurospider-cli/src/: lib.rs  main.rs
crates/neurospider-cli/src/commands/: config.rs  crawl.rs  mod.rs  status.rs
crates/neurospider-cli/src/config/: mod.rs  settings.rs
crates/neurospider-core/: Cargo.toml
crates/neurospider-core/src/: lib.rs
crates/neurospider-core/src/crawler/: coordinator.rs  engine.rs  mod.rs  rate_limiter.rs  worker.rs
crates/neurospider-core/src/http/: client.rs  connection_pool.rs  middleware.rs  mod.rs
crates/neurospider-core/src/parser/: html.rs  mod.rs  robots.rs  sitemap.rs
crates/neurospider-core/src/queue/: consumer.rs  manager.rs  mod.rs  producer.rs
crates/neurospider-core/src/types/: content.rs  job.rs  url.rs
crates/neurospider-security/: Cargo.toml
crates/neurospider-security/src/: lib.rs
crates/neurospider-security/src/audit/: logger.rs  mod.rs  trail.rs
crates/neurospider-security/src/auth/: jwt.rs  mod.rs  oauth.rs  rbac.rs
crates/neurospider-security/src/crypto/: encryption.rs  hashing.rs  mod.rs  signing.rs
crates/neurospider-security/src/detection/: behavioral.rs  fingerprint.rs  mod.rs  proxy.rs
crates/neurospider-storage/: Cargo.toml
crates/neurospider-storage/src/: lib.rs
crates/neurospider-storage/src/fdb/: client.rs  migrations.rs  mod.rs  schema.rs
crates/neurospider-storage/src/models/: content.rs  domain.rs  job.rs  url.rs
crates/neurospider-storage/src/repositories/: content_repository.rs  job_repository.rs  mod.rs  url_repository.rs
crates/neurospider-web/: Cargo.toml
crates/neurospider-web/src/: lib.rs  main.rs
crates/neurospider-web/src/handlers/: api.rs  dashboard.rs  mod.rs  websocket.rs
crates/neurospider-web/src/static/css/: styles.css
crates/neurospider-web/src/static/js/: dashboard.js
crates/neurospider-web/src/templates/: analytics.html  base.html  dashboard.html
