[workspace]
resolver = "2"
members = [
    "crates/neurospider-core",
    "crates/neurospider-ai", 
    "crates/neurospider-security",
    "crates/neurospider-storage",
    "crates/neurospider-api",
    "crates/neurospider-cli",
    "crates/neurospider-web",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tonic = "0.10"
prost = "0.12"
foundationdb = "0.8"
pulsar = "6.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = "4.0"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.0"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.6"
