[workspace]
resolver = "2"
members = [
    "crates/neurospider-core",
    "crates/neurospider-ai",
    "crates/neurospider-security",
    "crates/neurospider-storage",
    "crates/neurospider-api",
    "crates/neurospider-cli",
    "crates/neurospider-web",
]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# HTTP client and server
reqwest = { version = "0.11", features = ["json", "stream", "gzip"] }
hyper = { version = "1.7.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }

# Serialization and protocols
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tonic = "0.14.1"                                   # gRPC framework
prost = "0.14.1"                                   # Protocol buffers
prost-types = "0.14.1"

# Database and storage
# foundationdb = "0.9.2"  # Requires system libraries
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

# Message streaming
# pulsar = "6.0"  # Complex dependency, will add later

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = { version = "0.30.0", features = ["metrics", "trace"] }
opentelemetry-otlp = "0.30.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

# Security and cryptography  
chacha20poly1305 = "0.10"
ed25519-dalek = "2.0"
argon2 = "0.5"
rand = "0.9.2"
zeroize = "1.6"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Development and testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
wiremock = "0.6"
