[package]
name = "neurospider-ai"
version = "0.1.0"
edition = "2021"
description = "AI/ML integration for NeuroSpider"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# AI-specific dependencies (simplified for initial setup)
# candle-core = "0.3"
# candle-nn = "0.3"
# candle-transformers = "0.3"
# hf-hub = "0.3"
# tokenizers = "0.15"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }