[package]
name = "neurospider-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
neurospider-core = { path = "../neurospider-core" }
neurospider-ai = { path = "../neurospider-ai" }
neurospider-storage = { path = "../neurospider-storage" }
