[package]
name = "neurospider-api"
version = "0.1.0"
edition = "2021"
description = "REST API server for NeuroSpider"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# API-specific dependencies
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum = "0.7"
axum-extra = "0.9"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }