[package]
name = "neurospider-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neurospider"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
neurospider-core = { path = "../neurospider-core" }
neurospider-storage = { path = "../neurospider-storage" }
