[package]
name = "neurospider-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for NeuroSpider"
license = "MIT OR Apache-2.0"

[[bin]]
name = "neurospider"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

# CLI-specific dependencies
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }