[package]
name = "neurospider-security"
version = "0.1.0"
edition = "2021"
description = "Security and cryptography for NeuroSpider"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Security-specific dependencies
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }