[package]
name = "neurospider-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer with FoundationDB and messaging"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Storage-specific dependencies
# foundationdb = { workspace = true }  # Requires system libraries
sqlx = { workspace = true }
# pulsar = { workspace = true }  # Complex dependency, will add later

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }