[package]
name = "neurospider-web"
version = "0.1.0"
edition = "2021"
description = "Web dashboard for NeuroSpider"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Web-specific dependencies
axum = "0.8"
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
